modules/eks/conf/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-system
spec:
  ingressClassname: nginx
  rules:
  - hosts: prometheus-dev.devsecopswithshri.site # Need to create a DNS record for the ingress LB as CNAME
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: prom-stack-kube-prometheus
           port:
             number: 9090


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
spec:
  ingressClassname: nginx
  rules:
  - hosts: grafana-dev.devsecopswithshri.site # Need to create a DNS record for the ingress LB as CNAME
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: prom-stack-grafana
           port:
             number: 80
